# LearningRust

./: README.md
Calculator/: Cargo.toml
Calculator/src/: main.rs
RustVueAnalyzer/: Cargo.toml  Config.toml
RustVueAnalyzer/src/: main copy.rs  main.rs  main2.rs  main20240320.rs
bevy-tetris/: Cargo.toml  README.md
bevy-tetris/src/: board.rs  common.rs  main.rs  menu.rs  piece.rs  stats.rs  tempCodeRunnerFile.rs
doodle-box/: Cargo.toml  README.md
doodle-box/src/: lib.rs  main.rs
doodle-box/src/shapes/: mod.rs  paint_rect.rs  (+3 more)
hello_async/: Cargo.toml
hello_async/src/: main.rs
lists/src/: first.rs  four.rs  second.rs  third.rs
minigrep/src/: lib.rs  main.rs
multi-dimensional-talbe/: Cargo.toml  README.md
multi-dimensional-talbe/frontend/: README.md  env.d.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
multi-dimensional-talbe/frontend/src/: App.vue
multi-dimensional-talbe/frontend/src/api/: profile.ts
multi-dimensional-talbe/frontend/src/assets/: main.css
multi-dimensional-talbe/frontend/src/router/: index.ts
multi-dimensional-talbe/frontend/src/views/: index.vue
multi-dimensional-talbe/src/: lib.rs  main.rs
practice/src/: main.rs
rust101/: Cargo.toml  README.md
rust101/src/: main.rs  web_server.code-workspace
test_lists/: Cargo.toml
test_lists/src/: main.rs
todo/: Cargo.toml  tasks.json
todo/src/: main.rs  storage.rs  task.rs  ui.rs
todo_app/: Cargo.toml
todo_app/src/: main.rs
web-server/src/: lib.rs  main.rs  下面代码报错：error[E0618]: expected function, .rs
web_server/src/: api.rs  lib.rs  main.rs
