[package]
name = "multi-dimensional-talbe"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "HtmlCanvasElement", 
  "CanvasRenderingContext2d"] }

[lib]
crate-type = ["cdylib", "rlib"]
